--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "animate.css": "^4.1.1",
     "braintree-web-drop-in-react": "^1.2.1",
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "moment": "^2.29.1",
+    "npm": "^6.14.8",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
